# audio_book

./: .gitignore  README.md  pyproject.toml  render.yaml
backend/: .gitignore
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0f444fc7ecdb_remove_audio_name.py  1992b27f3f3b_initial.py  1d342819c4e5_initial.py  85fe72ab6477_book_image.py  9b5c327f8b14_celery_result.py  a6332d69e9f2_audio_name.py  a7d6b8f7e9dd_drop_s3url4.py  c50d15d98411_initial.py  d1417064c3a9_initial.py  e2922cefed4a_initial.py
backend/app/app/: celeryworker_pre_start.py  main.py  utils.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: audio.py  books.py  login.py  users.py  zip_audio.py
backend/app/app/core/: config.py  config3.py  security.py
backend/app/app/crud/: crud_audio.py  crud_book.py  crud_users.py  pdf_to_image.py  s3.py  text_to_speech.py  upload_to_s3
backend/app/app/crud/s3/: s3_audio.py  s3_book.py  s3_image.py
backend/app/app/db/: session.py
backend/app/app/models/: models.py
backend/app/app/schemas/: audio.py  books.py  s3book.py  users.py
backend/app/app/tests/endpoints/: test_crud_book.py  test_crud_user.py
