[tool.poetry]
name = "planar2"
version = "0.1.0"
description = ""
authors = ["Shammah Anucha <shammah.anucha@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.18.3"
python-multipart = "^0.0.5"
pydantic = {extras = ["email"], version = "^1.10.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
SQLAlchemy = "^1.4.41"
psycopg2 = "^2.9.3"
fastapi-mail = "^1.1.4"
python-dotenv = "^0.21.0"
black = "^22.8.0"
fastapi = "^0.83.0"
sib-api-v3-sdk = "^7.5.0"
alembic = "^1.8.1"
pypdf2 = "^3.0.1"
gtts = "^2.5.0"
mysql-connector = "^2.2.9"
mysql-connector-python = "^8.2.0"
pymysql = "^1.1.0"
fitz = "^0.0.1.dev2"
pdfplumber = "^0.10.3"
aiofiles = "^23.2.1"
boto3 = "^1.34.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
